--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,8 @@
+/* Heading */
+@import url('https://fonts.googleapis.com/css2?family=Prata&display=swap');
+/* Body */
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -22,5 +27,9 @@
         hover:bg-gray-500
        
     }
-      
+}
+@layer{
+    body{
+        @apply font-inter
+    }
 }
